test/classes/vass/method-def-with-type-binding-error-record-1.good
method-def-with-type-binding-error-record-1.chpl:2: error: Only member methods of the innermost class/record/union (here, "R") are allowed
