test/classes/vass/method-def-with-type-binding-error-record-1.chpl
record R {
  def P.rr() {}
}
